[gd_scene load_steps=4 format=3 uid="uid://dkklbfd0wjc12"]

[ext_resource type="Script" path="res://scripts/resources/ResBlessingTemporary.gd" id="1_c5gvr"]
[ext_resource type="Script" path="res://scripts/resources/ResBlessing.gd" id="2_vllht"]

[sub_resource type="Resource" id="Resource_jah5g"]
script = ExtResource("2_vllht")
blessing_name = "Stunned"
description = "Stunned!"
ow_stat_modifications = {
"bow_max_draw": 0.0,
"sprint_drain": 0.0,
"sprint_speed": -100.0,
"stamina": 0.0,
"stamina_gain": 0.0,
"walk_speed": -100.0
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_c5gvr")
blessing = SubResource("Resource_jah5g")
time = 5.0

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
